2018-09-07         Arnold D. Robbins     <arnold@skeeve.com>

	* intprops.h, mktime.c: Updated from GNULIB.

2018-08-24         Arnold D. Robbins     <arnold@skeeve.com>

	* mktime.c.old: Removed.

2018-08-17         Arnold D. Robbins     <arnold@skeeve.com>

	* mktime.c: Updated from GNULIB.
	* verify.h, intprops.h: Copied from supprt, for mktime.c
	* mktime.c.old: Original version, just in case.

2018-03-13         Arnold D. Robbins     <arnold@skeeve.com>

	* snprintf.c: Update copyright year.

2018-02-25         Arnold D. Robbins     <arnold@skeeve.com>

	* 4.2.1: Release tar ball made.

2017-11-07         John E. Malmberg      <wb8tyw@qsl.net>

	* Remove varargs.h usage in snprintf.c

2017-10-19         Arnold D. Robbins     <arnold@skeeve.com>

	* 4.2.0: Release tar ball made.

2017-10-08         Arnold D. Robbins     <arnold@skeeve.com>

	* strncasecmp.c: Fix FSF's address.

2017-06-21         Andrew J. Schorr     <aschorr@telemetry-investments.com>

	* getaddrinfo.c (getaddrinfo): Replace malloc+memset with calloc.

2016-10-23         Arnold D. Robbins     <arnold@skeeve.com>

	* General: Remove trailing whitespace from all relevant files.

2016-09-07         Arnold D. Robbins     <arnold@skeeve.com>

	* setenv.c: Update license text in setenv.c. Thanks
	to David Kaspar <dkaspar@redhat.com> for pointing out
	the necessity.

2016-08-25         Arnold D. Robbins     <arnold@skeeve.com>

	* 4.1.4: Release tar ball made.

2015-05-19         Arnold D. Robbins     <arnold@skeeve.com>

	* 4.1.3: Release tar ball made.

2015-04-29         Arnold D. Robbins     <arnold@skeeve.com>

	* 4.1.2: Release tar ball made.

2015-02-27         Arnold D. Robbins     <arnold@skeeve.com>

	* getaddrinfo.h (gai_strerror): Add declaration.
	* getaddrinfo.c (gai_strerror): New function.
	(getaddrinfo): Return errno values instead of just -1.

2014-04-08         Arnold D. Robbins     <arnold@skeeve.com>

	* 4.1.1: Release tar ball made.
