@@ -76,11 +76,7 @@
 # define NEED_MKTIME_WORKING DEBUG_MKTIME
 #endif
 
-#ifdef _LIBC
-typedef long int mktime_offset_t;
-#else
 # include "mktime-internal.h"
-#endif
 
 #ifndef _LIBC
 static void
@@ -531,7 +527,7 @@ mktime (struct tm *tp)
      be set as if the tzset() function had been called.  */
   __tzset ();
 
-# if defined __LIBC || NEED_MKTIME_WORKING
+# if defined _LIBC || NEED_MKTIME_WORKING
   static mktime_offset_t localtime_offset;
   return __mktime_internal (tp, __localtime_r, &localtime_offset);
 # else
