@@ -1,3 +1,7 @@
+2018-09-21         Arnold D. Robbins     <arnold@skeeve.com>
+
+	* dfa.c, intprops.h: Sync from GNULIB.
+
 2018-09-16         Arnold D. Robbins     <arnold@skeeve.com>
 
 	* Makefile.in: Regenerated, using Automake 1.16.1.
