@@ -1,3 +1,8 @@
+2018-09-21         Arnold D. Robbins     <arnold@skeeve.com>
+
+	* intprops.h, mktime.c, verify.h: Updated from GNULIB.
+	* mktime-internal.h: New file, imported from GNULIB.
+
 2018-09-07         Arnold D. Robbins     <arnold@skeeve.com>
 
 	* intprops.h, mktime.c: Updated from GNULIB.
